//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY



package com.lvl6.proto;

option java_outer_classname = "ClanGiftsProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO


//------------------------------------------------------------------------------------------

message ClanGiftProto {
	optional int32 clanGiftId = 1;
	optional string name = 2;
	optional int32 hoursUntilExpiration = 3;
	repeated ClanGiftRewardsProto clanGifts = 4;
	
}

//------------------------------------------------------------------------------------------

message ClanGiftRewardsProto {
	optional int32 clanGiftRewardId = 1;
	optional int32 clanGiftId = 2;
	optional int32 rewardId = 3;
	optional float chanceOfDrop = 4;
	
}

//------------------------------------------------------------------------------------------

message UserClanGiftProto {
	optional string userClanGiftId = 1;
	optional string receiverUserId = 2;
	optional string gifterUserId = 3;
	optional int32 clanGiftId = 4;
	optional int64 timeReceived = 5;
}
